cabal-version:       2.4
Name:                haskell-simple-todo
Version:             0.1.0
Homepage:            https://github.com/xddq/haskell-simple-todo
Bug-reports:         https://github.com/xddq/haskell-simple-todo
Category:            Web

executable todo-app
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  -- base is tied to the underlying ghc version!
  -- src: https://stackoverflow.com/questions/68558825/could-not-resolve-dependencies-while-installing-libraries-with-cabal
  build-depends:       base >= 4.16 && < 4.17,
                       base-compat >= 0.12 && < 0.13,
                       scotty >= 0.12 && < 0.13,
                       data-default-class,
                       aeson,
                       containers,
                       mtl,
                       scotty,
                       stm,
                       text,
                       transformers,
                       wai-extra,
                       blaze-builder,
                       bytestring,
                       http-types
  GHC-options:         -Wall -threaded
