cabal-version:       2.4
Name:                haskell-simple-todo
Version:             0.1.0
Homepage:            https://github.com/xddq/haskell-simple-todo
Bug-reports:         https://github.com/xddq/haskell-simple-todo
Category:            Web

executable todo-app
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  -- base is tied to the underlying ghc version!
  -- src: https://stackoverflow.com/questions/68558825/could-not-resolve-dependencies-while-installing-libraries-with-cabal
  build-depends:       base >= 4.16 && < 4.17,
                       base-compat >= 0.12 && < 0.13,
                       scotty == 0.12.1,
                       postgresql-simple == 0.6.5.1,
                       wai,
                       wai-cors == 0.2.7,
                       wai-extra == 3.1.13.0,
                       http-types == 0.12.3,
                       text == 1.2.5.0,
                       aeson == 2.1.2.1,
                       mtl == 2.2.2,
                       -- for testing the app
                       hspec == 2.11.3,
                       hspec-wai == 0.11.1,
  GHC-options:         -Wall -threaded
